Madihah was here (test)

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title> FlocCalendar</title>
+    <title>FlocCalendar</title>
     <link rel="stylesheet" href="style.css" />
     <link
       rel="stylesheet"
@@ -21,7 +21,7 @@
           <i class="fas fa-angle-left prev"></i>
           <div class="date">
             <h1></h1>
-            <p></p>
+            <p>MADIHAH WAS HERE</p>
           </div>
           <i class="fas fa-angle-right next"></i>
         </div>
