--- a/index.html
+++ b/index.html
@@ -13,7 +13,12 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.min.js"
         integrity="sha384-mQ93GR66B00ZXjt0YO5KlohRA5SY2XofN4zfuZxLkoj1gXtW8ANNCe9d5Y3eG5eD"
         crossorigin="anonymous"></script>
- 
+    <script src="https://polyfill.io/v3/polyfill.min.js?features=default"></script>
+
+    <link rel="stylesheet" type="text/css" href="style.css" />
+    <script type="module" src="googleMaps/index.js"></script>
+
+
     <title>Homepage</title>
 </head>
 
@@ -27,10 +32,9 @@
         </div>
     </div>
 
-    <div id="maps_widget" class="card">
-        <div id="map" class="card-img-top" alt="...">
+        <div id="maps_widget" class="card" alt = "test">
+            <div id = "map"></div>
         </div>
-    </div>
 
 
     <div id="calendar_widget" class="card">
@@ -84,14 +88,12 @@
 
 
 </main>
-
-
 <script
-    src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDpd2oRISoDWXwetcIA70tN0FB860W-mdY&callback=initMap&v=weekly"
-    defer></script>
+src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDpd2oRISoDWXwetcIA70tN0FB860W-mdY&callback=initMap&v=weekly"
+defer
+></script>
 
-<script
-    src="https://maps.googleapis.com/maps/api/directions/json?origin=AIzaSyDpd2oRISoDWXwetcIA70tN0FB860W-mdY&callback=initMap&v=weekly"></script>
+<script src = "https://maps.googleapis.com/maps/api/directions/json?origin=AIzaSyDpd2oRISoDWXwetcIA70tN0FB860W-mdY&callback=initMap&v=weekly"></script>
 </body>
 
 </html>
