--- a/Floc/calendar.html
+++ b/Floc/calendar.html
@@ -1,24 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
-    <script defer src="script.js"></script>
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="style.css" />
+    <script defer src="script_calender.js"></script>
     <title>Calendar</title>
-</head>
+  </head>
 
-<body>
-    
-</body>
+  <body></body>
 
-<main>
-
-
-</main>
-
-
-
+  <main></main>
 </html>
