--- a/Floc/maps.html
+++ b/Floc/maps.html
@@ -9,8 +9,8 @@
     <title>Add Map</title>
     <script src="https://polyfill.io/v3/polyfill.min.js?features=default"></script>
 
-    <link rel="stylesheet" type="text/css" href="./style.css" />
-    <script type="module" src="./index.js"></script>
+    <link rel="stylesheet" type="text/css" href="style.css" />
+    <script type="module" src="index_maps.js"></script>
   </head>
   <body>
     <h3>My Google Maps Demo</h3>
@@ -27,7 +27,7 @@
       src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDpd2oRISoDWXwetcIA70tN0FB860W-mdY&callback=initMap&v=weekly"
       defer
     ></script>
-      
-      <script src = "https://maps.googleapis.com/maps/api/directions/json?origin=AIzaSyDpd2oRISoDWXwetcIA70tN0FB860W-mdY&callback=initMap&v=weekly"></script>
+
+    <script src="https://maps.googleapis.com/maps/api/directions/json?origin=AIzaSyDpd2oRISoDWXwetcIA70tN0FB860W-mdY&callback=initMap&v=weekly"></script>
   </body>
 </html>
