--- a/Floc/index.html
+++ b/Floc/index.html
@@ -22,7 +22,7 @@
     ></script>
 
     <script src="https://polyfill.io/v3/polyfill.min.js?features=default"></script>
-    <script src="index_maps.js"></script>
+    <script src="googleMaps/index_maps.js"></script>
 
     <link rel="stylesheet" type="text/css" href="style.css" />
 
