Fixed Weather Icons

--- a/Floc/index.html
+++ b/Floc/index.html
@@ -71,7 +71,9 @@
                 </div>
             </div>
         </div>
-        <script src="weather/app.js"></script>
+        
+        <script defer src="weather/app.js"></script>
+    
         </div>
       </div>
     </div>
