--- a/Floc/login.html
+++ b/Floc/login.html
@@ -70,8 +70,8 @@
 
             <form class="form" action="login.php" method="post" id="login">
                 <h1 class="form_title">Join Floc</h1>
-                <p class="form_text"> to get access to a handbook packed with
-                    insightful advice for your travels
+                <p class="form_text"> Access your handbook packed with
+                    insightful advice for all your travels
                 </p>
                 <div class="form_message form_message-error"></div>
 
