--- a/weather.html
+++ b/weather.html
@@ -5,8 +5,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="main.css">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="css/main.css">
+    <link rel="stylesheet" href="css/dami_style.css">
 
     <script defer src="script.js"></script>
     <title>Weather</title>
@@ -14,12 +14,13 @@
 
 <body>
 
-    <article class="flexContainer">
+  <article class="flexContainer">
+    
         <div>
-            <img class="menu_icon item" src="/images/menu_icon.png">
+            <img class="menu_icon item" src="./images/menu_icon.png">
         </div>
         <div class="title">
-            <h1> Weather</h1>
+            <h1 class="title">Weather</h1>
         </div>
     </article>
 
