--- a/public/calendar.html
+++ b/public/calendar.html
@@ -36,7 +36,7 @@
 
   <div id="container">
 
-  <article class="flexContainer">
+  <article id="calendar_container" class="flexContainer">
 
       <div class="left">
         <div class="calendar">
